feat: Add Nosotros page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <!-- Menús izquierda (desktop/tablet) -->
             <ul class="nav-menu nav-left">
                 <li class="nav-item">
-                    <a href="#contacto" class="nav-link">Contacto</a>
+                    <a href="nosotros.html" class="nav-link">Nosotros</a>
                 </li>
                 <li class="nav-item">
                     <a href="#elecciones" class="nav-link">Elecciones</a>
@@ -59,7 +59,7 @@
         <div class="mobile-menu" id="mobile-menu">
             <ul class="mobile-nav">
                 <li class="mobile-nav-item">
-                    <a href="#contacto" class="mobile-nav-link">Contacto</a>
+                    <a href="nosotros.html" class="mobile-nav-link">Nosotros</a>
                 </li>
                 <li class="mobile-nav-item">
                     <a href="#elecciones" class="mobile-nav-link">Elecciones</a>
@@ -295,7 +295,7 @@
                     <div class="footer-nav-column">
                         <h4 class="footer-nav-title">Contacto</h4>
                         <ul class="footer-nav-list">
-                            <li><a href="#contacto" class="footer-nav-link">Contacto</a></li>
+                            <li><a href="#nosotros" class="footer-nav-link">Nosotros</a></li>
                             <li><a href="mailto:info@aseclar.org" class="footer-nav-link">info@aseclar.org</a></li>
                             <li><a href="tel:+123456789" class="footer-nav-link">+1 (234) 567-89</a></li>
                         </ul>
