--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="nosotros.html" class="nav-link">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#elecciones" class="nav-link">Elecciones</a>
+                    <a href="elecciones.html" class="nav-link">Elecciones</a>
                 </li>
                 <li class="nav-item">
                     <a href="#campeonatos" class="nav-link">Campeonatos</a>
@@ -62,7 +62,7 @@
                     <a href="nosotros.html" class="mobile-nav-link">Nosotros</a>
                 </li>
                 <li class="mobile-nav-item">
-                    <a href="#elecciones" class="mobile-nav-link">Elecciones</a>
+                    <a href="elecciones.html" class="mobile-nav-link">Elecciones</a>
                 </li>
                 <li class="mobile-nav-item">
                     <a href="#campeonatos" class="mobile-nav-link">Campeonatos</a>
