--- a/campeonatos.html
+++ b/campeonatos.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Conoce a ASECLAR - Asociación de Exalumnos Claretianos de Arequipa">
-    <meta name="keywords" content="exalumnos, asociación, claretianos, nosotros, visión, misión">
+    <meta name="description" content="Campeonatos - ASECLAR">
+    <meta name="keywords" content="campeonatos, deportes, exalumnos, claretianos">
     <meta name="author" content="ASECLAR">
-    <title>Nosotros - ASECLAR</title>
+    <title>Campeonatos - ASECLAR</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <meta name="theme-color" content="#ffffff">
@@ -81,95 +81,19 @@
     </header>
 
     <main class="main-content">
-        <!-- Hero Section -->
-        <section class="welcome" style="background-image: linear-gradient(
-            rgba(27, 44, 76, 0.7), /* Overlay azul marino con transparencia */
-            rgba(139, 30, 34, 0.6)  /* Overlay rojo claretiano con transparencia */
-        ), url('assets/heros/nosotros.jpg') ;">
-            <div class="welcome-content">
-                <h1>Conoce ASECLAR</h1>
-                <p>Somos la Asociación de Exalumnos Claretianos de Arequipa, un espacio de encuentro y confraternidad donde compartimos nuestra visión, misión y valores que nos unen como comunidad claretiana</p>
-            </div>
-        </section>
-
-        <!-- Sección Nosotros -->
-        <section id="nosotros" class="about-us">
-            <div class="about-us-container">
-                <!-- Quiénes Somos -->
-                <div class="about-intro">
-                    <h2>Quiénes Somos</h2>
-                    <p>La Asociación de Exalumnos Claretianos de Arequipa es un espacio de encuentro y confraternidad para aquellos que compartieron la experiencia de estudiar en el Colegio Claretiano. Nuestra asociación busca fortalecer los lazos de amistad y solidaridad entre sus miembros, y promover el crecimiento personal y colectivo a través de actividades y proyectos que reflejen los valores Claretianos.</p>
+        <!-- Sección En Construcción -->
+        <section class="under-construction">
+            <div class="construction-container">
+                <div class="construction-icon">
+                    <svg viewBox="0 0 24 24" width="80" height="80">
+                        <path d="M20 8h-3V4H3c-1.1 0-2 .9-2 2v11h2c0 1.66 1.34 3 3 3s3-1.34 3-3h6c0 1.66 1.34 3 3 3s3-1.34 3-3h2v-5l-3-4zM6 18.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5zm13.5-9l1.96 2.5H17V9.5h2.5zm-1.5 9c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z" fill="currentColor"/>
+                    </svg>
                 </div>
-
-                <!-- Visión y Misión -->
-                <div class="about-vm-grid">
-                    <div class="about-vm-card">
-                        <div class="about-vm-icon">
-                            <svg viewBox="0 0 24 24" width="32" height="32">
-                                <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z" fill="currentColor"/>
-                            </svg>
-                        </div>
-                        <h3>Visión</h3>
-                        <p>Ser un referente de unión y confraternidad entre los exalumnos Claretianos de Arequipa, promoviendo el crecimiento personal y colectivo, y contribuyendo al desarrollo de nuestra sociedad a través de la filosofía y valores Claretianos.</p>
-                    </div>
-
-                    <div class="about-vm-card">
-                        <div class="about-vm-icon">
-                            <svg viewBox="0 0 24 24" width="32" height="32">
-                                <path d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z" fill="currentColor"/>
-                            </svg>
-                        </div>
-                        <h3>Misión</h3>
-                        <p>Unir a los exalumnos Claretianos de Arequipa en un espacio de confraternidad y crecimiento, fomentando la formación integral, la solidaridad y el compromiso con nuestra sociedad, a través de actividades y proyectos que promuevan la excelencia y la innovación.</p>
-                    </div>
-                </div>
-
-                <!-- Valores Claretianos -->
-                <div class="about-values">
-                    <h3>Nuestros Valores Claretianos</h3>
-                    <div class="about-values-grid">
-                        <div class="about-value-item">
-                            <div class="about-value-icon">
-                                <svg viewBox="0 0 24 24" width="24" height="24">
-                                    <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" fill="currentColor"/>
-                                </svg>
-                            </div>
-                            <h4>Amor a Dios y al prójimo</h4>
-                        </div>
-
-                        <div class="about-value-item">
-                            <div class="about-value-icon">
-                                <svg viewBox="0 0 24 24" width="24" height="24">
-                                    <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z" fill="currentColor"/>
-                                </svg>
-                            </div>
-                            <h4>Respeto a la dignidad humana</h4>
-                        </div>
-
-                        <div class="about-value-item">
-                            <div class="about-value-icon">
-                                <svg viewBox="0 0 24 24" width="24" height="24">
-                                    <path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z" fill="currentColor"/>
-                                </svg>
-                            </div>
-                            <h4>Solidaridad y compromiso con la justicia</h4>
-                        </div>
-
-                        <div class="about-value-item">
-                            <div class="about-value-icon">
-                                <svg viewBox="0 0 24 24" width="24" height="24">
-                                    <path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z" fill="currentColor"/>
-                                </svg>
-                            </div>
-                            <h4>Excelencia e innovación en la educación</h4>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Llamado a la acción -->
-                <div class="about-cta">
-                    <p>Nuestra asociación está abierta a todos los exalumnos Claretianos de Arequipa que compartan nuestra visión y misión, y estén dispuestos a trabajar juntos para construir un futuro mejor para nuestra sociedad.</p>
-                    <a href="https://www.facebook.com/aseclar.aqp" target="_blank" rel="noopener noreferrer" class="about-cta-button">Únete a Nuestra Comunidad</a>
+                <h1>Página en Construcción</h1>
+                <p class="construction-description">Estamos trabajando para traerte información completa sobre nuestros campeonatos y eventos deportivos. Pronto podrás encontrar aquí calendarios, resultados y cómo participar.</p>
+                <div class="construction-actions">
+                    <a href="index.html" class="construction-button primary">Volver al Inicio</a>
+                    <a href="https://www.facebook.com/aseclar.aqp" target="_blank" rel="noopener noreferrer" class="construction-button secondary">Síguenos en Facebook</a>
                 </div>
             </div>
         </section>
@@ -231,13 +155,6 @@
                                 <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" fill="currentColor"/>
                             </svg>
                         </a>
-                        <!-- Instagram y LinkedIn ocultos temporalmente -->
-                        <!-- <a href="#" class="footer-social-link" aria-label="Instagram">
-                            ...existing code...
-                        </a>
-                        <a href="#" class="footer-social-link" aria-label="LinkedIn">
-                            ...existing code...
-                        </a> -->
                     </div>
                 </div>
             </div>
