--- a/elecciones.html
+++ b/elecciones.html
@@ -24,7 +24,7 @@
                     <a href="elecciones.html" class="nav-link">Elecciones</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#campeonatos" class="nav-link">Campeonatos</a>
+                    <a href="campeonatos.html" class="nav-link">Campeonatos</a>
                 </li>
             </ul>
 
@@ -38,13 +38,13 @@
             <!-- Menús derecha (desktop/tablet) -->
             <ul class="nav-menu nav-right">
                 <li class="nav-item">
-                    <a href="#proyectos" class="nav-link">Proyectos</a>
+                    <a href="proyectos.html" class="nav-link">Proyectos</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#comunidad" class="nav-link">Comunidad</a>
+                    <a href="comunidad.html" class="nav-link">Comunidad</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#estatutos" class="nav-link">Estatutos</a>
+                    <a href="estatutos.html" class="nav-link">Estatutos</a>
                 </li>
             </ul>
 
@@ -66,16 +66,16 @@
                     <a href="elecciones.html" class="mobile-nav-link">Elecciones</a>
                 </li>
                 <li class="mobile-nav-item">
-                    <a href="#campeonatos" class="mobile-nav-link">Campeonatos</a>
+                    <a href="campeonatos.html" class="mobile-nav-link">Campeonatos</a>
                 </li>
                 <li class="mobile-nav-item">
-                    <a href="#proyectos" class="mobile-nav-link">Proyectos</a>
+                    <a href="proyectos.html" class="mobile-nav-link">Proyectos</a>
                 </li>
                 <li class="mobile-nav-item">
-                    <a href="#comunidad" class="mobile-nav-link">Comunidad</a>
+                    <a href="comunidad.html" class="mobile-nav-link">Comunidad</a>
                 </li>
                 <li class="mobile-nav-item">
-                    <a href="#estatutos" class="mobile-nav-link">Estatutos</a>
+                    <a href="estatutos.html" class="mobile-nav-link">Estatutos</a>
                 </li>
             </ul>
         </div>
@@ -197,8 +197,8 @@
                 <h2>Tu Voto es Importante</h2>
                 <p>Participa en el proceso democrático de nuestra asociación. Conoce las propuestas, reflexiona y ejerce tu derecho al voto.</p>
                 <div class="cta-buttons">
-                    <a href="#registro" class="cta-button primary">Registrarse para Votar</a>
-                    <a href="#info" class="cta-button secondary">Más Información</a>
+                    <!-- <a href="#registro" class="cta-button primary">Registrarse para Votar</a> -->
+                    <a href="https://www.facebook.com/share/p/1CU179PPAu/" target="_blank" rel="noopener noreferrer" class="cta-button secondary">Más Información</a>
                 </div>
             </div>
         </section>
@@ -225,19 +225,19 @@
                         <h4 class="footer-nav-title">Navegación</h4>
                         <ul class="footer-nav-list">
                             <li><a href="index.html" class="footer-nav-link">Inicio</a></li>
-                            <li><a href="#eventos" class="footer-nav-link">Eventos</a></li>
-                            <li><a href="#noticias" class="footer-nav-link">Noticias</a></li>
-                            <li><a href="#comunidad" class="footer-nav-link">Comunidad</a></li>
+                            <li><span class="footer-nav-link" style="cursor: default; opacity: 0.6;">Eventos</span></li>
+                            <li><span class="footer-nav-link" style="cursor: default; opacity: 0.6;">Noticias</span></li>
+                            <li><span class="footer-nav-link" style="cursor: default; opacity: 0.6;">Comunidad</span></li>
                         </ul>
                     </div>
 
                     <div class="footer-nav-column">
                         <h4 class="footer-nav-title">Participación</h4>
                         <ul class="footer-nav-list">
-                            <li><a href="#proyectos" class="footer-nav-link">Proyectos</a></li>
-                            <li><a href="#campeonatos" class="footer-nav-link">Campeonatos</a></li>
+                            <li><span class="footer-nav-link" style="cursor: default; opacity: 0.6;">Proyectos</span></li>
+                            <li><span class="footer-nav-link" style="cursor: default; opacity: 0.6;">Campeonatos</span></li>
                             <li><a href="elecciones.html" class="footer-nav-link">Elecciones</a></li>
-                            <li><a href="#estatutos" class="footer-nav-link">Estatutos</a></li>
+                            <li><span class="footer-nav-link" style="cursor: default; opacity: 0.6;">Estatutos</span></li>
                         </ul>
                     </div>
 
@@ -245,8 +245,8 @@
                         <h4 class="footer-nav-title">Contacto</h4>
                         <ul class="footer-nav-list">
                             <li><a href="nosotros.html" class="footer-nav-link">Nosotros</a></li>
-                            <li><a href="mailto:info@aseclar.org" class="footer-nav-link">info@aseclar.org</a></li>
-                            <li><a href="tel:+123456789" class="footer-nav-link">+1 (234) 567-89</a></li>
+                            <li><span class="footer-nav-link" style="cursor: default; opacity: 0.6;">Email: En proceso</span></li>
+                            <li><span class="footer-nav-link" style="cursor: default; opacity: 0.6;">Teléfono: En proceso</span></li>
                         </ul>
                     </div>
                 </div>
@@ -255,21 +255,18 @@
                 <div class="footer-social">
                     <h4 class="footer-social-title">Síguenos</h4>
                     <div class="footer-social-links">
-                        <a href="#" class="footer-social-link" aria-label="Facebook">
+                        <a href="https://www.facebook.com/aseclar.aqp" target="_blank" rel="noopener noreferrer" class="footer-social-link" aria-label="Facebook">
                             <svg viewBox="0 0 24 24" width="24" height="24">
                                 <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" fill="currentColor"/>
                             </svg>
                         </a>
-                        <a href="#" class="footer-social-link" aria-label="Instagram">
-                            <svg viewBox="0 0 24 24" width="24" height="24">
-                                <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" fill="currentColor"/>
-                            </svg>
+                        <!-- Instagram y LinkedIn ocultos temporalmente -->
+                        <!-- <a href="#" class="footer-social-link" aria-label="Instagram">
+                            ...existing code...
                         </a>
                         <a href="#" class="footer-social-link" aria-label="LinkedIn">
-                            <svg viewBox="0 0 24 24" width="24" height="24">
-                                <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z" fill="currentColor"/>
-                            </svg>
-                        </a>
+                            ...existing code...
+                        </a> -->
                     </div>
                 </div>
             </div>
@@ -283,8 +280,8 @@
                     &copy; 2025 ASECLAR. Todos los derechos reservados.
                 </p>
                 <div class="footer-bottom-links">
-                    <a href="#privacidad" class="footer-bottom-link">Política de Privacidad</a>
-                    <a href="#terminos" class="footer-bottom-link">Términos de Uso</a>
+                    <span class="footer-bottom-link" style="cursor: default; opacity: 0.6;">Política de Privacidad</span>
+                    <span class="footer-bottom-link" style="cursor: default; opacity: 0.6;">Términos de Uso</span>
                 </div>
             </div>
 
