--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                     <a href="elecciones.html" class="nav-link">Elecciones</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#campeonatos" class="nav-link">Campeonatos</a>
+                    <a href="campeonatos.html" class="nav-link">Campeonatos</a>
                 </li>
             </ul>
 
             <!-- Logo central -->
             <div class="logo">
-                <a href="#inicio">
+                <a href="index.html">
                     <img src="assets/exal.png" alt="ASECLAR Logo" class="logo-img">
                 </a>
             </div>
@@ -37,13 +37,13 @@
             <!-- Menús derecha (desktop/tablet) -->
             <ul class="nav-menu nav-right">
                 <li class="nav-item">
-                    <a href="#proyectos" class="nav-link">Proyectos</a>
+                    <a href="proyectos.html" class="nav-link">Proyectos</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#comunidad" class="nav-link">Comunidad</a>
+                    <a href="comunidad.html" class="nav-link">Comunidad</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#estatutos" class="nav-link">Estatutos</a>
+                    <a href="estatutos.html" class="nav-link">Estatutos</a>
                 </li>
             </ul>
 
@@ -65,16 +65,16 @@
                     <a href="elecciones.html" class="mobile-nav-link">Elecciones</a>
                 </li>
                 <li class="mobile-nav-item">
-                    <a href="#campeonatos" class="mobile-nav-link">Campeonatos</a>
+                    <a href="campeonatos.html" class="mobile-nav-link">Campeonatos</a>
                 </li>
                 <li class="mobile-nav-item">
-                    <a href="#proyectos" class="mobile-nav-link">Proyectos</a>
+                    <a href="proyectos.html" class="mobile-nav-link">Proyectos</a>
                 </li>
                 <li class="mobile-nav-item">
-                    <a href="#comunidad" class="mobile-nav-link">Comunidad</a>
+                    <a href="comunidad.html" class="mobile-nav-link">Comunidad</a>
                 </li>
                 <li class="mobile-nav-item">
-                    <a href="#estatutos" class="mobile-nav-link">Estatutos</a>
+                    <a href="estatutos.html" class="mobile-nav-link">Estatutos</a>
                 </li>
             </ul>
         </div>
@@ -86,7 +86,7 @@
             <div class="welcome-content">
                 <h1>Bienvenido de vuelta Alumno Claretiano</h1>
                 <p>Reconecta con tu alma mater y otros graduados. Explora los eventos futuros, noticias y oportunidades de participación.</p>
-                <a href="#comunidad" class="welcome-button">Comunidad</a>
+                <a href="nosotros.html" class="welcome-button">Conócenos</a>
             </div>
         </section>
 
@@ -100,39 +100,39 @@
                     <!-- Card 1 -->
                     <div class="event-card">
                         <div class="event-image">
-                            <img src="assets/escudo exalumnos.jpg" alt="Reunión Anual de Exalumnos">
+                            <img src="assets/reunion-exalumnos.jpg" alt="Reunión Anual de Exalumnos">
                         </div>
                         <div class="event-content">
                             <h3>Reunión Anual de Exalumnos</h3>
-                            <p class="event-date">15 de Diciembre, 2024</p>
+                            <p class="event-date">25 de Octubre, 2025</p>
                             <p class="event-description">Únete a nuestra celebración anual donde recordaremos nuestros años formativos y celebraremos los logros de nuestra comunidad.</p>
-                            <a href="#evento-reunion" class="event-button">Ver Detalles</a>
+                            <a href="https://www.facebook.com/share/p/1FQBn2YNCu/" target="_blank" rel="noopener noreferrer" class="event-button">Ver Detalles</a>
                         </div>
                     </div>
 
                     <!-- Card 2 -->
                     <div class="event-card">
                         <div class="event-image">
-                            <img src="assets/escudo exalumnos_2.jpg" alt="Conferencia de Liderazgo">
+                            <img src="assets/segundo-card.jpg" alt="Campeonato de Exalumnos">
                         </div>
                         <div class="event-content">
-                            <h3>Conferencia de Liderazgo</h3>
-                            <p class="event-date">22 de Enero, 2025</p>
-                            <p class="event-description">Desarrollo profesional y personal con expertos en liderazgo empresarial y espiritual, siguiendo los valores claredianos.</p>
-                            <a href="#evento-conferencia" class="event-button">Ver Detalles</a>
+                            <h3>Campeonato de Exalumnos</h3>
+                            <p class="event-date">30 de Agosto, 2025</p>
+                            <p class="event-description">Vive la emoción del deporte y la camaradería en nuestro campeonato anual. Compite con exalumnos de diferentes generaciones y celebra el espíritu deportivo que nos une.</p>
+                            <a href="https://www.facebook.com/share/p/1Bw9hebJm6/" target="_blank" rel="noopener noreferrer" class="event-button">Ver Detalles</a>
                         </div>
                     </div>
 
                     <!-- Card 3 -->
                     <div class="event-card">
                         <div class="event-image">
-                            <img src="assets/exal.png" alt="Retiro Espiritual">
+                            <img src="assets/tercer-card.jpg" alt="Admisión Claret 2026">
                         </div>
                         <div class="event-content">
-                            <h3>Retiro Espiritual</h3>
-                            <p class="event-date">10 de Marzo, 2025</p>
-                            <p class="event-description">Un fin de semana de reflexión y renovación espiritual en un ambiente de fraternidad y contemplación.</p>
-                            <a href="#evento-retiro" class="event-button">Ver Detalles</a>
+                            <h3>Admisión Claret 2026</h3>
+                            <p class="event-date">Inscripción desde ahora</p>
+                            <p class="event-description">Inicia el proceso de admisión para el próximo año escolar. Conoce nuestra propuesta educativa claretiana, instalaciones y el proyecto formativo que transformará el futuro de tus hijos.</p>
+                            <a href="https://www.facebook.com/share/v/1Gi38Tb1FT/" target="_blank" rel="noopener noreferrer" class="event-button">Ver Detalles</a>
                         </div>
                     </div>
                 </div>
@@ -149,12 +149,12 @@
                     <!-- Noticia 1 -->
                     <article class="news-item">
                         <div class="news-image">
-                            <img src="assets/escudo exalumnos.jpg" alt="Nueva Directiva ASECLAR">
+                            <img src="assets/campeonato.jpg" alt="Fin del campeonato de exalumnos">
                         </div>
                         <div class="news-content">
-                            <h3>Nueva Directiva Electa para el Período 2025-2027</h3>
-                            <p class="news-description">Con gran alegría anunciamos la nueva directiva que liderará nuestra asociación durante los próximos dos años, comprometida con fortalecer los lazos entre exalumnos y promover los valores claredianos.</p>
-                            <a href="#noticia-directiva" class="news-link">
+                            <h3>Fin del campeonato de exalumnos</h3>
+                            <p class="news-description">Con gran alegría anunciamos la conclusión exitosa de nuestro campeonato de exalumnos, donde celebramos el espíritu deportivo y la camaradería entre todos los participantes.</p>
+                            <a href="https://www.facebook.com/share/p/1FzRpBbXZU/" target="_blank" rel="noopener noreferrer" class="news-link">
                                 Leer más
                                 <svg class="news-icon" viewBox="0 0 24 24" width="16" height="16">
                                     <path d="M7.828 11H20v2H7.828l5.364 5.364-1.414 1.414L4 12l7.778-7.778 1.414 1.414L7.828 11z" fill="currentColor" transform="rotate(180 12 12)"/>
@@ -166,12 +166,12 @@
                     <!-- Noticia 2 -->
                     <article class="news-item">
                         <div class="news-image">
-                            <img src="assets/escudo exalumnos_2.jpg" alt="Programa de Becas">
+                            <img src="assets/votaciones.jpg" alt="Debate de estatutos">
                         </div>
                         <div class="news-content">
-                            <h3>Lanzamiento del Programa de Becas Claretianas 2025</h3>
-                            <p class="news-description">Iniciamos un programa de becas destinado a estudiantes destacados que demuestren compromiso con los valores de San Antonio María Claret y excelencia académica.</p>
-                            <a href="#noticia-becas" class="news-link">
+                            <h3>Debate de Estatutos</h3>
+                            <p class="news-description">En esta reunión, se discutió los próximos pasos para fortalecer nuestra comunidad y los valores que nos unen.</p>
+                            <a href="https://www.facebook.com/share/v/14K8VCdFWWq/" target="_blank" rel="noopener noreferrer" class="news-link">
                                 Leer más
                                 <svg class="news-icon" viewBox="0 0 24 24" width="16" height="16">
                                     <path d="M7.828 11H20v2H7.828l5.364 5.364-1.414 1.414L4 12l7.778-7.778 1.414 1.414L7.828 11z" fill="currentColor" transform="rotate(180 12 12)"/>
@@ -181,7 +181,7 @@
                     </article>
 
                     <!-- Noticia 3 -->
-                    <article class="news-item">
+                    <!-- <article class="news-item">
                         <div class="news-image">
                             <img src="assets/exal.png" alt="Encuentro Internacional">
                         </div>
@@ -195,7 +195,7 @@
                                 </svg>
                             </a>
                         </div>
-                    </article>
+                    </article> -->
                 </div>
             </div>
         </section>
@@ -249,7 +249,7 @@
                 <div class="stay-connected-content">
                     <h2>Mantente Conectado</h2>
                     <p>La red claretiana nunca duerme. Únete a nuestra plataforma digital donde la tradición se encuentra con la innovación, y donde cada conexión fortalece nuestra misión compartida.</p>
-                    <a href="#registro" class="stay-connected-button">Conectar Ahora</a>
+                    <a href="https://www.facebook.com/aseclar.aqp" target="_blank" rel="noopener noreferrer" class="stay-connected-button">Conectar Ahora</a>
                 </div>
             </div>
         </section>
@@ -275,29 +275,29 @@
                     <div class="footer-nav-column">
                         <h4 class="footer-nav-title">Navegación</h4>
                         <ul class="footer-nav-list">
-                            <li><a href="#inicio" class="footer-nav-link">Inicio</a></li>
-                            <li><a href="#eventos" class="footer-nav-link">Eventos</a></li>
-                            <li><a href="#noticias" class="footer-nav-link">Noticias</a></li>
-                            <li><a href="#comunidad" class="footer-nav-link">Comunidad</a></li>
+                            <li><a href="index.html" class="footer-nav-link">Inicio</a></li>
+                            <li><span class="footer-nav-link" style="cursor: default; opacity: 0.6;">Eventos</span></li>
+                            <li><span class="footer-nav-link" style="cursor: default; opacity: 0.6;">Noticias</span></li>
+                            <li><span class="footer-nav-link" style="cursor: default; opacity: 0.6;">Comunidad</span></li>
                         </ul>
                     </div>
 
                     <div class="footer-nav-column">
                         <h4 class="footer-nav-title">Participación</h4>
                         <ul class="footer-nav-list">
-                            <li><a href="#proyectos" class="footer-nav-link">Proyectos</a></li>
-                            <li><a href="#campeonatos" class="footer-nav-link">Campeonatos</a></li>
-                            <li><a href="#elecciones" class="footer-nav-link">Elecciones</a></li>
-                            <li><a href="#estatutos" class="footer-nav-link">Estatutos</a></li>
+                            <li><span class="footer-nav-link" style="cursor: default; opacity: 0.6;">Proyectos</span></li>
+                            <li><span class="footer-nav-link" style="cursor: default; opacity: 0.6;">Campeonatos</span></li>
+                            <li><a href="elecciones.html" class="footer-nav-link">Elecciones</a></li>
+                            <li><span class="footer-nav-link" style="cursor: default; opacity: 0.6;">Estatutos</span></li>
                         </ul>
                     </div>
 
                     <div class="footer-nav-column">
                         <h4 class="footer-nav-title">Contacto</h4>
                         <ul class="footer-nav-list">
-                            <li><a href="#nosotros" class="footer-nav-link">Nosotros</a></li>
-                            <li><a href="mailto:info@aseclar.org" class="footer-nav-link">info@aseclar.org</a></li>
-                            <li><a href="tel:+123456789" class="footer-nav-link">+1 (234) 567-89</a></li>
+                            <li><a href="nosotros.html" class="footer-nav-link">Nosotros</a></li>
+                            <li><span class="footer-nav-link" style="cursor: default; opacity: 0.6;">Email: En proceso</span></li>
+                            <li><span class="footer-nav-link" style="cursor: default; opacity: 0.6;">Teléfono: En proceso</span></li>
                         </ul>
                     </div>
                 </div>
@@ -306,21 +306,18 @@
                 <div class="footer-social">
                     <h4 class="footer-social-title">Síguenos</h4>
                     <div class="footer-social-links">
-                        <a href="#" class="footer-social-link" aria-label="Facebook">
+                        <a href="https://www.facebook.com/aseclar.aqp" target="_blank" rel="noopener noreferrer" class="footer-social-link" aria-label="Facebook">
                             <svg viewBox="0 0 24 24" width="24" height="24">
                                 <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" fill="currentColor"/>
                             </svg>
                         </a>
-                        <a href="#" class="footer-social-link" aria-label="Instagram">
-                            <svg viewBox="0 0 24 24" width="24" height="24">
-                                <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" fill="currentColor"/>
-                            </svg>
+                        <!-- Instagram y LinkedIn ocultos temporalmente -->
+                        <!-- <a href="#" class="footer-social-link" aria-label="Instagram">
+                            ...existing code...
                         </a>
                         <a href="#" class="footer-social-link" aria-label="LinkedIn">
-                            <svg viewBox="0 0 24 24" width="24" height="24">
-                                <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z" fill="currentColor"/>
-                            </svg>
-                        </a>
+                            ...existing code...
+                        </a> -->
                     </div>
                 </div>
             </div>
@@ -334,8 +331,8 @@
                     &copy; 2025 ASECLAR. Todos los derechos reservados.
                 </p>
                 <div class="footer-bottom-links">
-                    <a href="#privacidad" class="footer-bottom-link">Política de Privacidad</a>
-                    <a href="#terminos" class="footer-bottom-link">Términos de Uso</a>
+                    <span class="footer-bottom-link" style="cursor: default; opacity: 0.6;">Política de Privacidad</span>
+                    <span class="footer-bottom-link" style="cursor: default; opacity: 0.6;">Términos de Uso</span>
                 </div>
             </div>
 
