feat: Update elections page, addindg results

--- a/elecciones.html
+++ b/elecciones.html
@@ -86,12 +86,154 @@
         <section class="elections-hero">
             <div class="elections-hero-content">
                 <h1>Elecciones ASECLAR 2025</h1>
-                <p>Conoce a los partidos y sus propuestas para el futuro de nuestra asociación</p>
+                <p>Primer proceso democrático completado con éxito - Conoce los resultados y a los partidos que participaron</p>
+            </div>
+        </section>
+
+        <!-- Resultados de Elecciones -->
+        <section class="elections-results">
+            <div class="elections-results-container">
+                <h2>Resultados Electorales 2025</h2>
+                <p class="results-subtitle">Un hito histórico para nuestra asociación</p>
+
+                <!-- Resumen General -->
+                <div class="results-summary">
+                    <div class="summary-card">
+                        <div class="summary-icon">
+                            <svg viewBox="0 0 24 24" width="40" height="40">
+                                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z" fill="currentColor"/>
+                            </svg>
+                        </div>
+                        <h3>Votación Exitosa</h3>
+                        <p class="summary-stat">25 de Octubre</p>
+                    </div>
+
+                    <div class="summary-card">
+                        <div class="summary-icon">
+                            <svg viewBox="0 0 24 24" width="40" height="40">
+                                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" fill="currentColor"/>
+                            </svg>
+                        </div>
+                        <h3>Total de Votos</h3>
+                        <p class="summary-stat">29 Votos</p>
+                    </div>
+
+                    <div class="summary-card">
+                        <div class="summary-icon">
+                            <svg viewBox="0 0 24 24" width="40" height="40">
+                                <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z" fill="currentColor"/>
+                            </svg>
+                        </div>
+                        <h3>Transparencia</h3>
+                        <p class="summary-stat">Observadores Presentes</p>
+                    </div>
+                </div>
+
+                <!-- Resultados Gráficos -->
+                <div class="results-graphic">
+                    <div class="results-chart">
+                        <h3>Distribución de Votos</h3>
+                        <div class="chart-container">
+                            <div class="party-result pad">
+                                <div class="party-result-header">
+                                    <h4>Alianza Democrática</h4>
+                                    <span class="party-result-votes">9 votos</span>
+                                </div>
+                                <div class="result-bar">
+                                    <div class="result-bar-fill pad-fill" style="width: 31%;">
+                                        <span class="result-percentage">31%</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="party-result ecc">
+                                <div class="party-result-header">
+                                    <h4>ECC Exalumnos Claretianos por el Cambio</h4>
+                                    <span class="party-result-votes">19 votos</span>
+                                </div>
+                                <div class="result-bar">
+                                    <div class="result-bar-fill ecc-fill" style="width: 66%;">
+                                        <span class="result-percentage">66%</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="party-result null">
+                                <div class="party-result-header">
+                                    <h4>Votos Nulos</h4>
+                                    <span class="party-result-votes">1 voto</span>
+                                </div>
+                                <div class="result-bar">
+                                    <div class="result-bar-fill null-fill" style="width: 3%;">
+                                        <span class="result-percentage">3%</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="results-info">
+                        <h3>Datos del Proceso Electoral</h3>
+                        <div class="info-grid">
+                            <div class="info-item">
+                                <span class="info-label">Fecha</span>
+                                <p class="info-value">25 de octubre de 2025</p>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">Horario</span>
+                                <p class="info-value">9:10 - 10:10 horas</p>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">Ubicación</span>
+                                <p class="info-value">Salón de Quinto B de Secundaria</p>
+                            </div>
+                            <div class="info-item">
+                                <span class="info-label">Escrutador</span>
+                                <p class="info-value">Prof. Alessandro Carpio Sancho</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Narración de Resultados -->
+                <div class="results-narrative">
+                    <div class="narrative-card">
+                        <h3>Un Momento Histórico</h3>
+                        <p>
+                            El 25 de octubre, la Asociación de Exalumnos Claretianos (Aseclar) vivió un día histórico con la realización de sus primeras elecciones. Dos equipos se disputaron el liderazgo: <strong>Alianza Democrata</strong>, liderada por Alejandro Huisa Figueroa (promoción 2001), y <strong>ECC Exalumnos Claretianos por el Cambio</strong>, representada por Jean Pierre Miranda Urruchi (promoción 2009).
+                        </p>
+                    </div>
+
+                    <div class="narrative-card">
+                        <h3>Proceso Transparente</h3>
+                        <p>
+                            Las votaciones se llevaron a cabo en el salón de quinto B de secundaria, desde las 9:10 hasta las 10:10 horas. Para garantizar la transparencia del proceso, ambos candidatos estuvieron presentes en la mesa y el salón contó con una cámara de vigilancia.
+                        </p>
+                    </div>
+
+                    <div class="narrative-card highlight">
+                        <h3>Victoria de ECC</h3>
+                        <p>
+                            Después de un conteo de votos realizado por el profesor de inglés, Alessandro Carpio Sancho, los resultados fueron los siguientes: de un total de 29 votos, Alianza Democrata obtuvo 9 votos y ECC logró 19 votos, con 1 voto nulo. <strong>De esta manera, ECC se convirtió en la primera junta directiva del Aseclar.</strong>
+                        </p>
+                    </div>
+
+                    <div class="narrative-card">
+                        <h3>Juramentación</h3>
+                        <p>
+                            En un emotivo acto, el presidente electo <strong>Jean Pierre Miranda Urruchi</strong> y el vicepresidente <strong>Enrique Luna</strong> (promoción 1979) juramentaron ante los presentes para ejercer sus cargos con transparencia y dedicación a partir del 20 de noviembre.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
 
         <!-- Partidos Section -->
         <section class="parties-section">
+            <div class="parties-section-header">
+                <h2>Partidos Participantes</h2>
+                <p class="parties-subtitle">Conoce a los equipos que presentaron sus propuestas en este proceso electoral histórico</p>
+            </div>
             <div class="parties-container">
                 <!-- Partido 1: Alianza Democrática -->
                 <article class="party-card">
@@ -188,18 +330,6 @@
                         <a href="https://drive.google.com/uc?export=download&id=1CHoxtiz0GFA3caGh3qefsU8SA8y3UOo_" class="party-button" download>Descargar Propuestas Completas</a>
                     </div>
                 </article>
-            </div>
-        </section>
-
-        <!-- Call to Action -->
-        <section class="elections-cta">
-            <div class="elections-cta-container">
-                <h2>Tu Voto es Importante</h2>
-                <p>Participa en el proceso democrático de nuestra asociación. Conoce las propuestas, reflexiona y ejerce tu derecho al voto.</p>
-                <div class="cta-buttons">
-                    <!-- <a href="#registro" class="cta-button primary">Registrarse para Votar</a> -->
-                    <a href="https://www.facebook.com/share/p/1CU179PPAu/" target="_blank" rel="noopener noreferrer" class="cta-button secondary">Más Información</a>
-                </div>
             </div>
         </section>
     </main>
