feat: Add new section - special communication

--- a/index.html
+++ b/index.html
@@ -90,6 +90,29 @@
             </div>
         </section>
 
+        <!-- Sección de Noticia Importante -->
+        <section class="important-announcement">
+            <div class="announcement-container">
+                <div class="announcement-badge">
+                    <svg viewBox="0 0 24 24" width="24" height="24">
+                        <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" fill="currentColor"/>
+                    </svg>
+                    <span>Comunicado Oficial</span>
+                </div>
+                <div class="announcement-content">
+                    <div class="announcement-text">
+                        <h2>Noticia Importante</h2>
+                        <p class="announcement-greeting">Buenos días, estimados compañeros claretianos.</p>
+                        <p class="announcement-body">Por medio del presente, informamos que se han iniciado formalmente las gestiones correspondientes a Aseclar, a partir de la primera reunión presencial realizada con el director del Colegio Claret, <strong>Alejandro Chávez Ramos</strong>.</p>
+                        <p class="announcement-body">En el transcurso de los próximos días, se brindará información detallada sobre los procesos que se van a desarrollar durante el presente año.</p>
+                    </div>
+                    <div class="announcement-image">
+                        <img src="assets/info1.JPG" alt="Reunión con el director del Colegio Claret">
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Sección de Eventos Futuros -->
         <section class="events">
             <div class="events-container">
